Implement drag'n'drop

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
 .App {
+  font-family: sans-serif;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+form {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: stretch;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+form input[placeholder] {
+  padding: 0.5rem 1rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+form input[type="submit"] {
+  padding: 0.5rem 1rem;
+  background-color: #fff;
+  text-transform: uppercase;
+  font-weight: 700;
+  border-color: #ccc;
+}
+
+ul,
+ol {
+  width: 500px;
+  margin: 1.5rem auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 1rem;
+  list-style: none;
 }
 
-.App-link {
-  color: #61dafb;
+ul > *,
+ol > * {
+  border: 1px solid #ccc;
+  border-radius: 0.75rem;
+  background-color: #fff;
+  overflow: hidden;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ul span,
+ol span {
+  display: inline-block;
+  padding: 1rem 2rem;
 }
